Fixed invisible outline in scrollable slider area

--- a/view/frontend/web/css/source/components/_slider.less
+++ b/view/frontend/web/css/source/components/_slider.less
@@ -36,6 +36,9 @@
             overflow-x: auto;
             scroll-behavior: smooth;
             scroll-snap-type: x mandatory;
+            &:focus-visible {
+                outline-offset: -4px;
+            }
             > div {
                 flex-shrink: 0;
             }
